--- a/learners/learners_app/templates/learners_app/home_page.html
+++ b/learners/learners_app/templates/learners_app/home_page.html
@@ -1,5 +1,8 @@
-{% extends "learners_app/base.html" %}
+{% extends "learners_app/header_3.html" %}
 
 {% block content %}
+<div class="row bg-warning">
+    <h1>Home Page</h1>
+</div>
 
 {% endblock content %}
