--- a/learners/learners_app/templates/learners_app/login.html
+++ b/learners/learners_app/templates/learners_app/login.html
@@ -1,4 +1,4 @@
-{% extends "learners_app/header_1.html" %}
+{% extends "learners_app/header_3.html" %}
 {% load widget_tweaks %}
 {% block content %}
 
@@ -11,26 +11,16 @@
 	<div class="col-4"></div>
 	<div class="col-4">
 		<div class="container-fluid">
-			<div class="card text-white bg-info mb-3" style="max-width: 100%;">
+			<div class="card text-white bg-warning mb-3" style="max-width: 100%;">
 				<div class="card-header text-center"><h4>Sign In</h4></div>
 				<div class="card-body bg-light text-dark" >
 					<form method="POST">
 						{% csrf_token %}
-						<div class="input-group form-group">
-							<div class="input-group-prepend">
-								<span class="input-group-text" style="width: 40px"><i class="fas fa-user-tie"></i></span>
-							</div>
-							<input type="text" class="form-control" placeholder="Employee ID" name="username" required="True">
-						</div>
+						<input type="text" class="form-control m-2 p-2" placeholder="User Name" name="username" required="True">
+						<input type="password" class="form-control m-2 p-2" placeholder="Password" name="password"  required="True">
 
-						<div class="input-group form-group">
-							<div class="input-group-prepend">
-								<span class="input-group-text" style="width: 40px"><i class="fas fa-key"></i></span>
-							</div>
-							<input type="password" class="form-control" placeholder="Password" name="password"  required="True">
-						</div>
 						<div class="text-center">
-							<button class="btn btn-success" type="submit"><i class="fa fa-thumbs-up" aria-hidden="true"></i> Login</button>
+							<button class="btn btn-outline-success" type="submit"><i class="fa fa-thumbs-up" aria-hidden="true"></i> Login</button>
 						</div>
 					</form>
 					<br>
@@ -42,7 +32,7 @@
 				</div>
 				<div class="card-footer text-center bg-light">
 					<div class="justify-content-center text-dark">
-						Don't have an account?<a href=""> Sign Up</a>
+						Don't have an account?<a href="{% url 'registration_page' %}"> Sign Up</a>
 					</div>
 					<div class="justify-content-center">
 						<a href="">Forgot your password?</a>
