latest_commit_jose (6-Nov-2022)

--- a/learners/learners_app/templates/learners_app/home_page.html
+++ b/learners/learners_app/templates/learners_app/home_page.html
@@ -3,6 +3,8 @@
 {% block content %}
 <div class="row bg-warning">
     <h1>Home Page</h1>
+ <a href="{% url 'user_list_temp' %}"><i class="fa fa-arrow-right" aria-hidden="true"></i> User List <span class="badge bg-secondary"> {{user_count}}</span></a>
+
 </div>
 
 {% endblock content %}
